# websocket-server

./: .clang-format  .clang-format-include  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  PROTOCOL.md  README.md  introduction.md  main.py  meson.build  plain.py  response_file.txt  run.bat  run.sh  secure.py  ws-examples.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: CheckAndAddFlag.cmake  Doxygen.cmake  Sanitizers.cmake
config/: config.json
docs/: Doxyfile.in
src/server-test/: meson.build  server_test.cpp
src/websocket-server/: CMakeLists.txt  asiofwd.hh  main.cc
src/websocket_server/: BasicSSLSession.hh  CMakeLists.txt  CommandLineInterface.cc  CommandLineInterface.hh  Common.hh  DetectHttpSession.cc  DetectHttpSession.hh  DetectSession.cc  DetectSession.hh  DetectTCPSession.cc  DetectTCPSession.hh  HttpListener.hh  HttpSession.cc  HttpSession.hh  Listener.cc  Listener.hh  Logger.cc  Logger.hh  PacketHandler.cc  PacketHandler.hh  PlainHttpListener.hh  PlainHttpSession.cc  PlainHttpSession.hh  PlainProtocolDetector.cc  PlainProtocolDetector.hh  PlainTCPListener.hh  PlainTCPSession.cc  PlainTCPSession.hh  PlainWebSocketSession.cc  PlainWebSocketSession.hh  ProtocolDetector.cc  ProtocolDetector.hh  RequestHandler.hh  SSLHttpListener.hh  SSLHttpSession.cc  SSLHttpSession.hh  SSLProtocolDetector.cc  SSLProtocolDetector.hh  SSLTCPListener.hh  SSLTCPSession.cc  (+26 more)
src/websocket_server/Packets/: Common.hh  In.hh  Out.hh
src/websocket_server/Packets/In/: HandshakePacket.hh  PongPacket.hh  WeatherStatusPacket.hh
src/websocket_server/utils/: packet_view.hh  source_location.hh
subprojects/: fmt.wrap  magic_enum.wrap  nlohmann_json.wrap
subprojects/fmt-8.0.1/: meson.build
subprojects/magic_enum-0.7.3/: meson.build
test/: CMakeLists.txt  SendRequestsTest.http  SharedStateTest.cc  WebSocketTest.js  cabundle.pem  secure.py
test/mocktcp-client/: CMakeLists.txt  main.c  mockclient
www/: index.html  script.js  style.css
